# czmq

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING.LESSER  Dockerfile  FindLibsodium.cmake  FindUuid.cmake  FindZeroMQ.cmake  Findlibcurl.cmake  Findlibmicrohttpd.cmake  Findlibsodium.cmake  Findlibzmq.cmake  Findlz4.cmake  Findnss.cmake  Findsystemd.cmake  Finduuid.cmake  INSTALL.cygwin  ISSUES.cygwin  Jenkinsfile  Makefile.am  NEWS  README.cygwin  README.md  README.txt  Vagrantfile  acinclude.m4  appveyor.yml  autogen.sh  ci_build.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  configure.in  czmq.autopkg  (+11 more)
bindings/czmq-jni/: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
bindings/czmq-jni/gradle/wrapper/: gradle-wrapper.properties
bindings/czmq-jni/src/main/c/: zctx.c  zframe.c  zlist.c  zmsg.c  zsock.c
bindings/czmq-jni/src/main/java/org/zeromq/czmq/: ZCtx.java  ZFrame.java  ZList.java  ZMQ.java  ZMsg.java  ZSock.java
bindings/czmq-jni/src/test/java/org/zeromq/czmq/: ZFrameTest.java  ZMsgTest.java  ZSockTest.java
bindings/jni/: .gitignore  CMakeLists.txt  README.md  build.gradle  ci_build.sh  gradlew  gradlew.bat  settings.gradle
bindings/jni/android/: CMakeLists.txt  README.md  android_toolchain.cmake  build.sh
bindings/jni/czmq-jni/: CMakeLists.txt  Findczmq.cmake  build.gradle
bindings/jni/czmq-jni-all/: build.gradle
bindings/jni/czmq-jni-native/: build.gradle
bindings/jni/czmq-jni/android/: CMakeLists.txt  android_toolchain.cmake  build.sh
bindings/jni/czmq-jni/src/main/c/: org_zeromq_czmq_Zarmour.c  org_zeromq_czmq_Zcert.c  org_zeromq_czmq_Zcertstore.c  org_zeromq_czmq_Zchunk.c  org_zeromq_czmq_Zclock.c  org_zeromq_czmq_Zconfig.c  org_zeromq_czmq_Zdigest.c  org_zeromq_czmq_Zdir.c  org_zeromq_czmq_ZdirPatch.c  org_zeromq_czmq_Zfile.c  org_zeromq_czmq_Zframe.c  org_zeromq_czmq_Zhash.c  org_zeromq_czmq_Zhashx.c  org_zeromq_czmq_ZhttpClient.c  org_zeromq_czmq_ZhttpRequest.c  org_zeromq_czmq_ZhttpResponse.c  org_zeromq_czmq_ZhttpServerOptions.c  org_zeromq_czmq_Ziflist.c  org_zeromq_czmq_Zlist.c  org_zeromq_czmq_Zlistx.c  org_zeromq_czmq_Zloop.c  org_zeromq_czmq_Zmsg.c  org_zeromq_czmq_Zosc.c  org_zeromq_czmq_Zpoller.c  org_zeromq_czmq_Zproc.c  org_zeromq_czmq_Zsock.c  org_zeromq_czmq_Zstr.c  org_zeromq_czmq_Zsys.c  org_zeromq_czmq_Ztrie.c  org_zeromq_czmq_Zuuid.c
bindings/jni/gradle/wrapper/: gradle-wrapper.properties
bindings/jni/msvc/: .gitignore  configure.bat  platform.h  resource.rc
bindings/jni/msvc/properties/: DebugDEXE.props  DebugDLL.props  DebugLTCG.props  EXE.props  LTCG.props  Link.props  Messages.props  Output.props  Release.props  ReleaseDEXE.props  ReleaseDLL.props  ReleaseLIB.props  ReleaseLTCG.props  ReleaseSEXE.props  Win32.props  x64.props
bindings/jni/msvc/vs2010/: build.bat  call_javah.bat  czmq.sln
bindings/jni/msvc/vs2010/libczmqjni/: libczmqjni.props  libczmqjni.vcxproj  libczmqjni.vcxproj.filters
bindings/jni/msvc/vs2012/: build.bat  call_javah.bat  czmq.sln
bindings/jni/msvc/vs2012/libczmqjni/: libczmqjni.props  libczmqjni.vcxproj  libczmqjni.vcxproj.filters
bindings/jni/msvc/vs2013/: build.bat  call_javah.bat  czmq.sln
bindings/jni/msvc/vs2013/libczmqjni/: libczmqjni.vcxproj  libczmqjni.vcxproj.filters
bindings/jni/msvc/vs2015/: build.bat  call_javah.bat  czmq.sln
bindings/jni/msvc/vs2015/libczmqjni/: libczmqjni.props  libczmqjni.vcxproj  libczmqjni.vcxproj.filters
bindings/jni/src/main/c/: org_zeromq_Zactor.c  org_zeromq_Zdir.c  org_zeromq_ZdirPatch.c  org_zeromq_Zfile.c  org_zeromq_Zframe.c  org_zeromq_Zhash.c  org_zeromq_Zhashx.c  org_zeromq_Ziflist.c  org_zeromq_Zlist.c  org_zeromq_Zloop.c  org_zeromq_Zmsg.c  org_zeromq_Zpoller.c  org_zeromq_Zsock.c  org_zeromq_Zstr.c  org_zeromq_Ztrie.c  org_zeromq_Zuuid.c  org_zeromq_czmq_Zactor.c  org_zeromq_czmq_Zarmour.c  org_zeromq_czmq_Zcert.c  org_zeromq_czmq_Zcertstore.c  org_zeromq_czmq_Zchunk.c  org_zeromq_czmq_Zclock.c  org_zeromq_czmq_Zconfig.c  org_zeromq_czmq_Zdigest.c  org_zeromq_czmq_Zdir.c  org_zeromq_czmq_ZdirPatch.c  org_zeromq_czmq_Zfile.c  org_zeromq_czmq_Zframe.c  org_zeromq_czmq_Zhash.c  org_zeromq_czmq_Zhashx.c  org_zeromq_czmq_ZhttpClient.c  org_zeromq_czmq_ZhttpRequest.c  org_zeromq_czmq_ZhttpResponse.c  org_zeromq_czmq_ZhttpServer.c  org_zeromq_czmq_ZhttpServerConnection.c  org_zeromq_czmq_Ziflist.c  org_zeromq_czmq_Zlist.c  org_zeromq_czmq_Zlistx.c  org_zeromq_czmq_Zloop.c  org_zeromq_czmq_Zmsg.c  (+9 more)
bindings/jni/src/main/java/org/zeromq/: Zactor.java  Zdir.java  ZdirPatch.java  Zfile.java  Zframe.java  Zhash.java  Zhashx.java  Ziflist.java  Zlist.java  Zloop.java  Zmsg.java  Zpoller.java  Zsock.java  Zstr.java  Ztrie.java  Zuuid.java
doc/: .gitignore  Makefile.am  Makefile.am.supplement  _template.wd  asciidoc.conf  czmq.adoc  czmq.md  czmq.txt  libzapi.txt  makecert.doc  makecert.txt  mkman  mkmans  mksite  test_zgossip.txt  wdput  xml2wd.pl  zactor.doc  zactor.txt  zapi.txt  zarmour.doc  zarmour.txt  zauth.doc  zauth.txt  zauth_v2.doc  zauth_v2.txt  zbase64.txt  zbeacon.doc  zbeacon.txt  zbeacon_v2.doc  zbeacon_v2.txt  zcert.doc  zcert.txt  zcertstore.doc  zcertstore.txt  zchunk.doc  zchunk.txt  zclock.doc  zclock.txt  zconfig.doc  (+82 more)
labs/: Makefile.am  Makefile.am.supplement  README.txt  czmq_labs_selftest.c  libczmq_labs.pc.in  zpubsub.c  zpubsub.h  zpubsub_filter.c  zpubsub_option.c  ztimeout.c
src/: .gitignore  .valgrind.supp  CMakeLists-local.txt  Makefile  Makefile.am  Makefile.am.supplement  Makefile.ams  Makemodule-local.am  Makemodule.am  czmq_classes.h  czmq_private_selftest.c  czmq_selftest  czmq_selftest.c  doit  doit2  libczmq.la  libczmq.pc  libczmq.pc.in  libzapi.pc  libzapi.pc.in  python_cffi.inc  selftest  selftest.cfg  sockopts.gsl  sockopts.xml  test_randof.c  test_zgossip  test_zgossip.c  timeout.py  valgrind.supp  vg  zactor.c  zapi_selftest.c  zargs.c  zarmour.c  zarmour.xml  zauth.c  zauth_actor.x  zauth_v2.c  zbase64.c  (+89 more)
src/foreign/sha1/: sha1.h  sha1.inc_c
src/foreign/slre/: slre.inc_c
(+933 files in other folders)
