ACLOCAL_AMFLAGS = -I config

SUBDIRS = src model doc addons 

DIST_SUBDIRS = src model doc addons

EXTRA_DIST = \
	version.sh \
	builds/android/Android.mk \
	builds/android/Application.mk \
	builds/android/build.sh \
	builds/android/clean.sh \
	builds/mingw32/Makefile.mingw32 \
	builds/mingw32/platform.h \
	examples/security/grasslands.c \
	examples/security/strawhouse.c \
	examples/security/woodhouse.c \
	examples/security/stonehouse.c \
	examples/security/ironhouse.c \
	examples/security/ironhouse2.c \
	examples/security/README.txt \
	examples/security/LICENSE \
	foreign/trex/history.txt \
	foreign/trex/LICENSE \
	foreign/trex/README \
	foreign/trex/readme.txt \
	foreign/trex/test2.c \
	foreign/trex/test.c \
	foreign/trex/trex.c \
	foreign/trex/trex.h \
	foreign/trex/TRexpp.h \
	foreign/sha1/sha1.c \
	foreign/sha1/sha1.h \
	builds/msvc/czmq.rc \
	builds/msvc/platform.h \
	builds/msvc/resource.h \
	builds/msvc/vs2008/README.txt \
	builds/msvc/vs2008/czmq.sln \
	builds/msvc/vs2008/czmq_selftest/czmq_selftest.vcproj \
	builds/msvc/vs2008/czmq/czmq.vcproj \
	builds/msvc/vs2010/czmq.sln \
	builds/msvc/vs2010/czmq_selftest/czmq_selftest.props \
	builds/msvc/vs2010/czmq_selftest/czmq_selftest.vcxproj \
	builds/msvc/vs2010/czmq/czmq.props \
	builds/msvc/vs2010/czmq/czmq.vcxproj \
	builds/msvc/vs2010/czmq/czmq.vcxproj.filters \
	builds/msvc/vs2010/libzmq.import.props \
	builds/msvc/vs2010/libzmq.import.xml \
	builds/msvc/vs2010/czmq.import.props \
	builds/msvc/vs2010/czmq.import.xml \
	builds/msvc/vs2010/libsodium.import.props \
	builds/msvc/vs2010/properties/ConsoleDebugDynamic.props \
	builds/msvc/vs2010/properties/Debug.props \
	builds/msvc/vs2010/properties/Static.props \
	builds/msvc/vs2010/properties/Dynamic.props \
	builds/msvc/vs2010/properties/ConsoleReleaseLinkTimeCodeGeneration.props \
	builds/msvc/vs2010/properties/StaticLinkTimeCodeGeneration.props \
	builds/msvc/vs2010/properties/StaticReleaseLinkTimeCodeGeneration.props \
	builds/msvc/vs2010/properties/DynamicDebug.props \
	builds/msvc/vs2010/properties/x64.props \
	builds/msvc/vs2010/properties/StaticDebugLinkTimeCodeGeneration.props \
	builds/msvc/vs2010/properties/Release.props \
	builds/msvc/vs2010/properties/ConsoleReleaseDynamic.props \
	builds/msvc/vs2010/properties/StaticRelease.props \
	builds/msvc/vs2010/properties/ConsoleReleaseStatic.props \
	builds/msvc/vs2010/properties/Win32.props \
	builds/msvc/vs2010/properties/StaticDebug.props \
	builds/msvc/vs2010/properties/DynamicRelease.props \
	builds/msvc/vs2010/properties/Console.props \
	builds/msvc/vs2010/properties/ConsoleDebugLinkTimeCodeGeneration.props \
	builds/msvc/vs2010/properties/Common.props \
	builds/msvc/vs2010/properties/LinkTimeCodeGeneration.props \
	builds/msvc/vs2010/properties/ConsoleDebugStatic.props \
	builds/msvc/vs2010/libsodium.import.xml \
	builds/msvc/vs2012/czmq.sln \
	builds/msvc/vs2012/czmq_selftest/czmq_selftest.props \
	builds/msvc/vs2012/czmq_selftest/czmq_selftest.vcxproj \
	builds/msvc/vs2012/czmq/czmq.props \
	builds/msvc/vs2012/czmq/czmq.vcxproj \
	builds/msvc/vs2012/czmq/czmq.vcxproj.filters \
	builds/msvc/vs2012/libzmq.import.props \
	builds/msvc/vs2012/libzmq.import.xml \
	builds/msvc/vs2012/czmq.import.props \
	builds/msvc/vs2012/czmq.import.xml \
	builds/msvc/vs2012/libsodium.import.props \
	builds/msvc/vs2012/properties/ConsoleDebugDynamic.props \
	builds/msvc/vs2012/properties/Debug.props \
	builds/msvc/vs2012/properties/Static.props \
	builds/msvc/vs2012/properties/Dynamic.props \
	builds/msvc/vs2012/properties/ConsoleReleaseLinkTimeCodeGeneration.props \
	builds/msvc/vs2012/properties/StaticLinkTimeCodeGeneration.props \
	builds/msvc/vs2012/properties/StaticReleaseLinkTimeCodeGeneration.props \
	builds/msvc/vs2012/properties/DynamicDebug.props \
	builds/msvc/vs2012/properties/x64.props \
	builds/msvc/vs2012/properties/StaticDebugLinkTimeCodeGeneration.props \
	builds/msvc/vs2012/properties/Release.props \
	builds/msvc/vs2012/properties/ConsoleReleaseDynamic.props \
	builds/msvc/vs2012/properties/StaticRelease.props \
	builds/msvc/vs2012/properties/ConsoleReleaseStatic.props \
	builds/msvc/vs2012/properties/Win32.props \
	builds/msvc/vs2012/properties/StaticDebug.props \
	builds/msvc/vs2012/properties/DynamicRelease.props \
	builds/msvc/vs2012/properties/Console.props \
	builds/msvc/vs2012/properties/ConsoleDebugLinkTimeCodeGeneration.props \
	builds/msvc/vs2012/properties/Common.props \
	builds/msvc/vs2012/properties/LinkTimeCodeGeneration.props \
	builds/msvc/vs2012/properties/ConsoleDebugStatic.props \
	builds/msvc/vs2012/libsodium.import.xml \
	builds/msvc/vs2013/czmq.sln \
	builds/msvc/vs2013/czmq_selftest/czmq_selftest.props \
	builds/msvc/vs2013/czmq_selftest/czmq_selftest.vcxproj \
	builds/msvc/vs2013/czmq/czmq.props \
	builds/msvc/vs2013/czmq/czmq.vcxproj \
	builds/msvc/vs2013/czmq/czmq.vcxproj.filters \
	builds/msvc/vs2013/libzmq.import.props \
	builds/msvc/vs2013/libzmq.import.xml \
	builds/msvc/vs2013/czmq.import.props \
	builds/msvc/vs2013/czmq.import.xml \
	builds/msvc/vs2013/libsodium.import.props \
	builds/msvc/vs2013/properties/ConsoleDebugDynamic.props \
	builds/msvc/vs2013/properties/Debug.props \
	builds/msvc/vs2013/properties/Static.props \
	builds/msvc/vs2013/properties/Dynamic.props \
	builds/msvc/vs2013/properties/ConsoleReleaseLinkTimeCodeGeneration.props \
	builds/msvc/vs2013/properties/StaticLinkTimeCodeGeneration.props \
	builds/msvc/vs2013/properties/StaticReleaseLinkTimeCodeGeneration.props \
	builds/msvc/vs2013/properties/DynamicDebug.props \
	builds/msvc/vs2013/properties/x64.props \
	builds/msvc/vs2013/properties/StaticDebugLinkTimeCodeGeneration.props \
	builds/msvc/vs2013/properties/Release.props \
	builds/msvc/vs2013/properties/ConsoleReleaseDynamic.props \
	builds/msvc/vs2013/properties/StaticRelease.props \
	builds/msvc/vs2013/properties/ConsoleReleaseStatic.props \
	builds/msvc/vs2013/properties/Win32.props \
	builds/msvc/vs2013/properties/StaticDebug.props \
	builds/msvc/vs2013/properties/DynamicRelease.props \
	builds/msvc/vs2013/properties/Console.props \
	builds/msvc/vs2013/properties/ConsoleDebugLinkTimeCodeGeneration.props \
	builds/msvc/vs2013/properties/Common.props \
	builds/msvc/vs2013/properties/LinkTimeCodeGeneration.props \
	builds/msvc/vs2013/properties/ConsoleDebugStatic.props \
	builds/msvc/vs2013/libsodium.import.xml \
	packaging/nuget/package.config \
	packaging/nuget/package.targets \
	packaging/nuget/package.bat \
	packaging/nuget/package.gsl \
	packaging/nuget/package.xml \
	packaging/nuget/package.nuspec 
